# flow-fixer

./: CHANGELOG.md  README.md  pyproject.toml
examples/: sample_report.md
extension/: README.md  background.js  content.js  inject.js  manifest.json  popup.css  popup.html  popup.js
extension/lib/: classify.js  match.js  privacy.js  speeds.js
flowfixer/: __init__.py  analyze.py
scripts/: package_extension.ps1  render_assets.py
tests/: test_analyze.py  test_sanitize_privacy.py
