[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowfixer"
version = "0.4.2"
description = "Reliability toolkit for Google Flow — HAR forensics, live monitor, optional self-pacing. Not a bypass tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "coldbricks" }]
keywords = [
  "google-flow",
  "google-labs",
  "har",
  "forensics",
  "reliability",
  "recaptcha",
  "veo",
  "rate-limit",
  "observability",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
flowfixer = "flowfixer.cli:main"

[project.urls]
Homepage = "https://github.com/coldbricks/flow-fixer"
Issues = "https://github.com/coldbricks/flow-fixer/issues"

[tool.setuptools.packages.find]
include = ["flowfixer*"]
